tests/fixtures/LatestTests/TypeConversionFunctionTests/errors/char_from_bool.fg
/; EXPECT_ERROR: FunctionArgumentTypeMismatch
print(Char(true))

